--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -1,14 +1,25 @@
+{% assign ongoing_education = data[1] | where_exp: "item", "item.endDate == '' or item.endDate == nil" %}
+{% assign completed_education = data[1] | where_exp: "item", "item.endDate != '' and item.endDate != nil" %}
+{% assign completed_education = completed_education | sort: 'startDate' | reverse %}
+{% assign education = ongoing_education | concat: completed_education %}
+
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign education = data[1] | sort: 'startDate' | reverse %}
   {% for content in education %}
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
           {% if content.startDate and content.startDate != '' %}
-            {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
-            {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
-            {% assign date = startDate | append: ' - ' %}
-            {% assign date = date | append: endDate %}
+            {% assign startYear = content.startDate | split: '-' | first %}
+            {% if content.endDate == "" or content.endDate == nil %}
+              {% assign date = 'Since ' | append: startYear %}
+            {% else %}
+              {% assign endYear = content.endDate | split: '-' | first %}
+              {% if startYear == endYear %}
+                {% assign date = startYear %}
+              {% else %}
+                {% assign date = startYear | append: ' - ' | append: endYear %}
+              {% endif %}
+            {% endif %}
           {% else %}
             {% assign date = null %}
           {% endif %}
