--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -10,6 +10,9 @@
       {% else %}
         {% assign redirect = page.redirect | relative_url %}
       {% endif %}
+    {%- if page.redirect_to -%}
+      <meta http-equiv="refresh" content="0; url={{ page.redirect_to }}/" />
+    {%- endif -%}
       <meta http-equiv="refresh" content="3; url={{ redirect }}">
     {% endif %}
     {% include head.liquid %}
