--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -10,7 +10,7 @@
       {% else %}
         {% assign redirect = page.redirect | relative_url %}
       {% endif %}
-      <meta url={{ redirect }}">
+      <meta http-equiv="refresh" content="0; url={{ redirect }}">
     {% endif %}
     {% include head.liquid %}
   </head>
