--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -1,24 +1,9 @@
 ---
 layout: default
 ---
-{% unless site.data.resume %}
-  <div class="post">
-    <header class="post-header">
-      <h1 class="post-title">
-        {{ page.title }}
-        {% if page.cv_pdf %}
-          <a
-            href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="float-right"
-            ><i class="fa-solid fa-file-pdf"></i
-          ></a>
-        {% endif %}
-      </h1>
-      {% if page.description %}
-        <p class="post-description">{{ page.description }}</p>
-      {% endif %}
-    </header>
-  </div>
-{% endunless %}
+<!-- _layouts/cv.html -->
+        <div class="post">
+
+	<object data="../assets/pdf/MarcTang_CV_eng.pdf#pagemode=none" width="750" height="1000" type='application/pdf'></object>
+
+        </div>
