--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -4,7 +4,7 @@
  {% if site.enable_publication_thumbnails %}
     <div class="col col-sm-2 abbr">
       {%- if entry.abbr -%}
-        {%- assign colors = "FFB3BA,FFDFBA,BAE1FF,FFCCE5,E1D4FF,D3BAFF,FFFFBA" | split: "," -%}
+        {%- assign colors = "FFB3BA,FFDFBA,BAE1FF,0A75AD,FF007F,C337BD" | split: "," -%}
         {%- assign color_index = entry.abbr | size | modulo: colors.size -%}
         {%- assign random_color = colors[color_index] -%}
         <abbr
